Fix last row spacing for flex items

--- a/src/CountryCard.css
+++ b/src/CountryCard.css
@@ -1,6 +1,9 @@
 .CountryCard {
   width: 264px;
   height: 335px;
+}
+
+.CountryCard-link {
   border-radius: 4px;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
 }
@@ -17,4 +20,8 @@
 
 .CountryCard-detail h3 {
   margin-bottom: 1rem;
+}
+
+.blank {
+  height: 0;
 }
